Ajout du devis en ligne

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "jquery": true
     },
     "extends": [
       "plugin:vue/essential",
