--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "mailgun.js": "^2.0.1",
+    "popper.js": "^1.15.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
